Comments: fix display name and instance wrapping

--- a/_sass/_comments.scss
+++ b/_sass/_comments.scss
@@ -31,10 +31,6 @@ section#comments {
       gap: 0.5em;
       grid-area: name;
 
-      .account {
-        display: none;
-      }
-
       .instance {
         background-color: var(--faint);
         border-radius: 9999px;
@@ -103,8 +99,10 @@ section#comments {
         color: var(--secondary-accent-contrast);
 
         &::before {
-          content: "✓ ";
+          content: "✓";
           font-weight: bold;
+          margin-inline-end: 0.25em;
+          margin-inline-start: -0.25em;
         }
       }
     }
